padding bottom added for maps, menu spacing corrected

--- a/sass/components/content/_restaurants.scss
+++ b/sass/components/content/_restaurants.scss
@@ -24,6 +24,10 @@
   margin: 0 auto;
 }
 
+.info-map:nth-of-type(2) {
+  padding-bottom: 2rem;
+}
+
 
 @media (min-width: $tablet-size){
 
